--- a/materi_kuliah_deep_learning.ipynb
+++ b/materi_kuliah_deep_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "materi kuliah deep learning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMMGFiRxNX0QMLtuzEQb97Z",
+      "authorship_tag": "ABX9TyOMXUD2cRLL4dp1K+eG3w8F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         }
       ],
       "source": [
-        "# first neural network with keras tutorial\n",
+        "\n",
         "from numpy import loadtxt\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense\n",
@@ -78,34 +78,35 @@
     {
       "cell_type": "code",
       "source": [
-        "...\n",
-        "# load the dataset\n",
         "dataset = loadtxt('data_diabetesi.csv', delimiter=',')\n",
-        "# split into input (X) and output (y) variables\n",
-        "X = dataset[:,0:8]\n",
-        "y = dataset[:,8]\n",
-        "..."
+        "# split into input (X) and output (y) variables\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VJWfAfyWqpKM",
-        "outputId": "869f7191-cdbf-4e7d-824f-96970141958b"
+        "id": "VJWfAfyWqpKM"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Ellipsis"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pisahkan dataset sebagai input (x) dan outout (y)"
+      ],
+      "metadata": {
+        "id": "w6xY2IQ1uzXr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = dataset[:,0:8]\n",
+        "y = dataset[:,8]\n"
+      ],
+      "metadata": {
+        "id": "cJ7GKDtqu8tL"
+      },
+      "execution_count": 18,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
